css/style.css
@font-face {
  src: url(../fonts/Luna.ttf);
  font-family: Luna;
}
@font-face {
  src: url(../fonts/JosefinSlab-Bold.ttf);
  font-family: JSRB;
}
@font-face {
  src: url(../fonts/JosefinSlab-SemiBold.ttf);
  font-family: JSRSB;
}
@font-face {
  src: url(../fonts/PatrickHandSC-Regular.ttf);
  font-family: PHR;
}

body, html{
  height:100%;
  margin:0;
  font-size:20px;
  font-family:PHR;
  font-weight:400;
  line-height:1.5em;
  color:#666;
}


header{
  height: 100vh;
}

.pimg1, .pimg2, .pimg3{
  position:relative;
  opacity:0.70;
  background-position:center;
  background-size:cover;
  background-repeat:no-repeat;

  /*
    fixed = parallax
    scroll = normal
  */
  background-attachment:fixed;
}

.pimg1{
  background-image:url('../img/image1.jpg');
  min-height:100%;
  z-index: auto;
}

.pimg2{
  background-image:url('../img/image2.jpg');
  min-height:100%;
  z-index: auto;
}

.pimg3{
  background-image:url('../img/image3.jpg');
  min-height:65%;
  z-index: auto;
}

.section{
  text-align:center;
  padding:1px 10px;
}

.section-dark{
  background-color:#282e34;
  color:#ddd;
}


nav{
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100px;
  padding: 10px 100px;
  box-sizing: border-box;
}

nav .logo{

  padding: 22px 20px;
  margin-left: 1%;
  margin-top: 50px;
  height: 80px;
  float: left;
  z-index: 3;
  size: 5px;
}

nav .logo img{


  width: 30%;
  opacity: 0.6;
}
nav .logo img:hover{
  background-color: rgba(255, 255, 255, 0.5);
  border-radius: 10px;
}

nav .logo img:active{
  background-color: rgba(28, 230, 120, 0.5);
}

nav ul{
  list-style: none;
  float: right;
  margin-right: 30px;
  margin-top: 60px;
  padding: 0;
  display: flex;
}

nav li{
  list-style: none;

}

nav ul li a {
  line-height: 80px;
  color: #FFF;
  padding: 12px 40px;
  text-decoration: none;
  text-transform: uppercase;
  background-color: rgba(128, 128, 128, 0.5);
  border-radius: 1px;
}

nav ul li a:focus{
  outline: none;
}

nav ul li a:hover{
  background-color: rgba(255, 255, 255, 0.5);
  color: #000;
}

nav ul li a:active{
  background-color: rgba(28, 230, 120, 0.5);
}



.Title{
  position:absolute;
  top:31%;
  width:100%;
  text-align:left;
  padding-left: 8%;
  color:#000;
  opacity:0.97;
  font-family:PHR;
  font-weight: bold;
  font-size:60px;
  letter-spacing:8px;
  text-transform:uppercase;
}

.Intro{
  position:absolute;
  top:39%;
  width:100%;
  text-align:left;
  padding-left: 8%;
  color:#111;
  font-family: JSRSB;
  font-size:24px;
  opacity:0.65;

}


.Intro .border{
  background-color: #111;
  color: #FFFFFF;
  padding: 15px;
}

.Intro .border.trans{
  background-color:transparent;

}

.title-about{
  font-size: 30px;
  font-family: JSRB;
  letter-spacing: 4px;
  font-weight: bold;
  margin-bottom: 0;
}

.body-about{
  font-size: 20px;
  font-family: JSRSB;
  letter-spacing: 3px;
}

.body-resume{
  vertical-align: center;
  font-size: 20px;
  font-family: JSRSB;
  letter-spacing: 3px;
}



.body-resume img{
  vertical-align: center;
  width: 28px;
}
.body-resume img:hover{
  background-color: rgba(128, 128, 128, 0.5);
  border-radius: 5px;
}


.contact{
  position:absolute;
  top: 20%;
  left: 50%;
  transition: translate(-50%,-50%);

}

.contact a{
  display: inline-block;
  color: #000;
  margin: 50px;
  justify-content: center;
  font-size: 70px;
}
.wrapper-contact{
  position: absolute;
  top: 43%;
  left: 50%;
  color: #000;
  letter-spacing: 8px;

}


.title-icon{
  margin: 20px 0;
  font-size: 20px;
  font-family: JSRSB;
}

.title-icon img{
  line-height: 1px;
  width: 30px;
  margin-top: 20px 0;
}


@media(max-width:568px){
  .pimg1, .pimg2, .pimg3{
    background-attachment:scroll;
  }
}

